--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="canvas1"></canvas>
 
-    <img src=""
+    <img id="player" src="New Model mekanik game\Player\1 Pink_Monster"
 
     <script type="module" src="main.js"></script>
 </body>
