--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <canvas id="canvas1"></canvas>
 
     <img id="player" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer1" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer2" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer3" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer4" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer5" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
 
     <script type="module" src="main.js"></script>
 </body>
