RUNNING, JUMPING, FALLING

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <canvas id="canvas1"></canvas>
 
-    <img id="player" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
-    <img id="layer1" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="player" src="asset\karakter_game-removebg.png">
+    <!-- <img id="layer1" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer2" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer3" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer4" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
-    <img id="layer5" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer5" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png"> -->
 
     <script type="module" src="main.js"></script>
 </body>
