--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <canvas id="canvas1"></canvas>
 
     <img id="player" src="asset\karakter_game-removebg.png">
-    <!-- <img id="layer1" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="layer1" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer2" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer3" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
     <img id="layer4" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
-    <img id="layer5" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png"> -->
+    <img id="layer5" src="asset\1 Pink_Monster\Pink_Monster_Run_6.png">
+    <img id="enemy_fly" src="asset\enemy_fly.png">
+    <img id="enemy_plant" src="asset\enemy_plant.png">
+    <img id="enemy_spider_big" src="asset\enemy_spider_big.png">
 
     <script type="module" src="main.js"></script>
 </body>
