--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Garda Gaduh</title>
+    <title>Garda Gaduh ultime</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
