--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <img id="layer3" src="aset\aset\layer-3.png">
     <img id="layer4" src="aset\aset\layer-4.png">
     <img id="layer5" src="aset\aset\layer-5.png">
-    <!-- <img id="enemy_fly" src="aset\aset\enemy_fly.png">
+    <img id="enemy_fly" src="aset\aset\enemy_fly.png">
     <img id="enemy_plant" src="aset\aset\enemy_plant.png">
-    <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png"> -->
+    <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png">
 
     <script type="module" src="main.js"></script>
 </body>
