--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <img id="enemy_fly" src="aset\aset\enemy_fly.png">
     <img id="enemy_plant" src="aset\aset\enemy_plant.png">
     <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png">
+    <img id="fire" src="aset\aset\fire.png">
 
     <script type="module" src="main.js"></script>
 </body>
