--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <canvas id="canvas1"></canvas>
 
-    <img id="player" src="aset\aset\player.png">
+    <img id="player" src="aset\aset\Tanpa_judul__1200_x_913_piksel_-removebg.png">
     <img id="layer1" src="aset\aset\layer-1.png">
     <img id="layer2" src="aset\aset\layer-2.png">
     <img id="layer3" src="aset\aset\layer-3.png">
@@ -19,6 +19,7 @@
     <img id="enemy_plant" src="aset\aset\enemy_plant.png">
     <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png">
     <img id="fire" src="aset\aset\fire.png">
+    <img id="dust" src="aset\aset\dust.png">
 
     <script type="module" src="main.js"></script>
 </body>
