--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <img id="enemy_plant" src="aset\aset\enemy_plant.png">
     <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png">
     <img id="fire" src="aset\aset\fire.png">
-    <img id="dust" src="aset\aset\dust.png">
+    <img id="collisionAnimation" src="aset\aset\dust.png">
+
 
     <script type="module" src="main.js"></script>
 </body>
