--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img id="enemy_spider_big" src="aset\aset\enemy_spider_big.png">
     <img id="fire" src="aset\aset\fire.png">
     <img id="collisionAnimation" src="aset\aset\dust.png">
-
+    <img id="lives" src="aset\aset\heart.png">
 
     <script type="module" src="main.js"></script>
 </body>
